# reconstruct_NFL

./: .gitignore  CMakeLists.txt  README.md
configs/: books_200M_double_0R_zipf_10000-weights.txt  fb_200M_double_0R_zipf_10000-weights.txt  fb_200M_double_80R_zipf_10000-weights.txt  lognormal_190M_double_0R_zipf_10000-weights.txt  lognormal_190M_double_80R_zipf_10000-weights.txt  lognormal_200M_double_0R_zipf_10000-weights.txt  longitudes_200M_double_0R_zipf_10000-weights.txt  longitudes_200M_double_100R_zipf_10000-weights.txt  longitudes_200M_double_80R_zipf_10000-weights.txt  longlat_200M_double_0R_zipf_10000-weights.txt  longlat_200M_double_100R_zipf_10000-weights.txt  longlat_200M_double_80R_zipf_10000-weights.txt  nfl.in  normal_200M_double_0R_zipf_10000-weights.txt  original_nfl.in  osm_cellids_200M_double_0R_zipf_10000-weights.txt  weights.txt  wiki_ts_200M_double_0R_zipf_10000-weights.txt  ycsb_200M_double_0R_zipf_10000-weights.txt  ycsb_200M_double_100R_zipf_10000-weights.txt  ycsb_200M_double_20R_zipf_10000-weights.txt
lib/libmkl/: MKLConfig.cmake
scripts/: benchmark.sh  data_gen.sh  format.sh  nf_convert.sh  workload_gen.sh
src/benchmark/: benchmark.cc  benchmark.h  workload.h
src/models/: bnaf.h  numerical_flow.h
src/nfl/: nfl.h
src/torch_models/: numerical_flow.h  torch_models_test.cpp
src/util/: common.h  data_generator.cc  format_data.cc  nf_data_converter.cc  workload.h  workload_generator.cc
test/: CMakeLists.txt  CreateBiLipsLIExpData.cpp  test1.cpp  test1.h
train/: assess_quality.py  distribution_transformer.py  mean_var.py  numerical_flow.py  requirement.txt  requirements.txt  test.py  test.sh  testModel.py  train_flow.sh
